--- a/src/app/widgets/transformer-selector/transformer-selector.component.scss
+++ b/src/app/widgets/transformer-selector/transformer-selector.component.scss
@@ -5,5 +5,6 @@ h4 {
 }
 
 .content {
+  flex: 1 1 0;
   overflow-y: auto;
 }
